scripts/nullaway/original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8.txt
../original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Scenario.java:31: error: [NullAway] assigning @Nullable expression to @NonNull field
	private String _name = null;
	               ^
    (see http://t.uber.com/nullaway )
../original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Side.java:185: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return (!_players.isEmpty()) ? _players.get(name) : null;
		^
    (see http://t.uber.com/nullaway )
../original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Stack.java:118: error: [NullAway] initializer method does not guarantee @NonNull fields _portagedItems (line 62), _subStacks (line 68), _positionLabel (line 74) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Stack(Unit unit,int unitID,int stackID)
	       ^
    (see http://t.uber.com/nullaway )
../original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Stack.java:184: error: [NullAway] initializer method does not guarantee @NonNull fields _portagedItems (line 62), _subStacks (line 68) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Stack(Stack stack)
	       ^
    (see http://t.uber.com/nullaway )
../original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Stack.java:40: error: [NullAway] assigning @Nullable expression to @NonNull field
	private Unit _unit = null;
	             ^
    (see http://t.uber.com/nullaway )
../original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Stack.java:264: error: [NullAway] dereferenced expression _subStacks.get(_subStacks.keySet().toArray()[0]) is @Nullable
			return _subStacks.get(_subStacks.keySet().toArray()[0]).toString();
			                                                       ^
    (see http://t.uber.com/nullaway )
../original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Stack.java:267: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
../original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Stack.java:369: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
../original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Stack.java:401: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
../original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Stack.java:465: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return subStack;
		^
    (see http://t.uber.com/nullaway )
../original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Stack.java:524: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return subStack;
		^
    (see http://t.uber.com/nullaway )
../original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Stack.java:594: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
		stack.setPositionLabel(null); // Specifying null makes it empty.
		                       ^
    (see http://t.uber.com/nullaway )
../original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/counters/Unit.java:73: error: [NullAway] initializer method does not guarantee @NonNull field _description (line 56) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	protected Unit() {}
	          ^
    (see http://t.uber.com/nullaway )
../original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Game.java:43: error: [NullAway] assigning @Nullable expression to @NonNull field
	private static Game _game = null;
	                    ^
    (see http://t.uber.com/nullaway )
../original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Game.java:87: error: [NullAway] dereferenced expression _sides.get(side) is @Nullable
		    _sides.get(side).addPlayer(name,nationality,entryTurn))
		                    ^
    (see http://t.uber.com/nullaway )
../original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Game.java:108: error: [NullAway] dereferenced expression _sides.get(side) is @Nullable
		return _sides.get(side).player(name);
		                       ^
    (see http://t.uber.com/nullaway )
../original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Game.java:119: error: [NullAway] dereferenced expression _sides.get(Side.Sides.ALLIES) is @Nullable
		_alliedPlayers.addAll(_sides.get(Side.Sides.ALLIES).playerList());
		                                                   ^
    (see http://t.uber.com/nullaway )
../original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Game.java:122: error: [NullAway] dereferenced expression _sides.get(Side.Sides.AXIS) is @Nullable
		_axisPlayers.addAll(_sides.get(Side.Sides.AXIS).playerList());
		                                               ^
    (see http://t.uber.com/nullaway )
../original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/utilities/Serialization.java:138: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return object;
		^
    (see http://t.uber.com/nullaway )
19 errors
